fix(feature/create-forms-responsivity): fixed social media infogap size

--- a/client/src/Views/Contact/Contact.css
+++ b/client/src/Views/Contact/Contact.css
@@ -27,7 +27,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
     width: 50%;
     max-width: 594px;
 }
@@ -35,7 +34,7 @@
 .line-group-div{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 56px;
 }
 
